--- a/index.html
+++ b/index.html
@@ -4,6 +4,28 @@
 		<meta charset="utf-8">
 		<link rel="shortcut icon" href="favicon.ico">
 		<title> Lenguaje Web </title>
+		<style>
+			h1 {
+
+			color: red;
+			font-weight: 500px;
+			font-family: Arial;
+			font-size: 20px;
+				}
+			h2 	{
+			color:black;
+			font-size: 16px;	
+
+				}
+			img {
+			border: blue 1px solid;
+				}
+			p   {
+			color: yellow;
+			font-size: 14px;
+			    } 	
+
+		</style>
 	</head>
    
 	<body>
