--- a/index.html
+++ b/index.html
@@ -1,62 +1,45 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="utf-8">
-		<link rel="shortcut icon" href="favicon.ico">
-		<title> Lenguaje Web </title>
+	<head>	
 		<style>
-			h1 {
-
-			color: red;
-			font-weight: 500px;
-			font-family: Arial;
-			font-size: 20px;
-				}
-			h2 	{
-			color:black;
-			font-size: 16px;	
-
-				}
-			img {
-			border: blue 1px solid;
-				}
-			p   {
-			color: yellow;
-			font-size: 14px;
-			    } 	
 
 		</style>
+		<meta charset="utf-8">
+	
+		<link rel="stylesheet" href="stylesheet.css">
+		<title> Lenguaje Web </title>
 	</head>
    
 	<body>
-		<h1 style="color:red; font-family: Arial; font-size: 20px; weigth: 500;">Algunos lenguajes de la web</h1>
-		<h2 style="color:black; font-size: 16px">HTML + CSS +Javascript</h2>
+		<h1>Algunos lenguajes de la web</h1>
+		<h2>HTML + CSS +Javascript</h2>
 			
-			<ul><h3>
+			<ul>
+				<h3>
 				<li>
 				HTML 5
 				</li></h3>
-				<img src="img/html.png"  style="border: blue 1px solid">
+				<img src="img/html.png">
 			
-			<p style="color:yellow; font-size: 14px">
+			<p>
 				<b>HTML</b> (Hyper Text Markup Language. versión 5)es la quinta revisión importante del lenguaje bássico de la <a href="http://google.com">World Wide Web </a> HTML.
 			</p>
-			<p style="color:yellow; font-size: 14px"><b> Usa la extension </b>.<i>html</i>
+			<p><b> Usa la extension </b>.<i>html</i>
 			<li><h3>
 				CSS 3
 			</li></h3>
-			<img src="img/css.png" style="border: blue 1px solid">
-			<p style="color:yellow; font-size: 14px">
+			<img src="img/css.png">
+			<p>
 				<b>Hoja de estilo en cascada</b><i>o</i> <b>CSS</b><i>(siglas en inglés de cascading style sheets)</i> es un lenguaje usado para definir y crear la presentación de un documento estructurado escrito en HTML.
 			</p>
-			<p style="color:yellow; font-size: 14px">
+			<p>
 				<b>Usa la extensión</b> css
 			</p>
 			<li><h3>
 				JavaScript
 			</li></h3>
-			<img src="img/js.png" style="border: blue 1px solid">
-			<p style="color:yellow; font-size: 14px">
+			<img src="img/js.png">
+			<p>
 			   <b>JavaScript</b> (abreviado comúnmente <b>"JS"</b>) es un lenguaje de programación interpretado utilizado principalmente en el lado del cliente <i>(client-side)</i>, implementando como parte de un navegador web permitiendo mejoras en la interfaz de usuario y páginas web dinámicas.
 			   <b>Usa la extensión. <i>js</i></b>
 			</ul>
